# loxboot

./: .gitignore  AGENT_BRIEF.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  EVIDENCE_MATRIX.md  KNOWN_ISSUES.md  PROJECT_STATE.md  README.md  RELEASE_CHECKLIST.md  V0_2_0_CORE_AUDIT_AND_PLAN.md  WIP_ESP32_OTA.md  generate_crc16_table.c  loxboot_claude_code_prompts.md
.github/workflows/: ci.yml  release.yml
adapters/esp32/: loxboot_esp32_platform.c  loxboot_esp32_platform.h  loxboot_flash_esp32.c  loxboot_flash_esp32.h
adapters/stm32/: loxboot_flash_stm32.c  loxboot_flash_stm32.h
build_gcc/: CMakeCache.txt
build_gcc_test/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  loxboot.sln  loxboot.vcxproj  loxboot.vcxproj.filters  test_loxboot_boot_sequence.vcxproj  test_loxboot_boot_sequence.vcxproj.filters  test_loxboot_commit_slot.vcxproj  test_loxboot_commit_slot.vcxproj.filters  test_loxboot_confirm_boot.vcxproj  test_loxboot_confirm_boot.vcxproj.filters  test_loxboot_crash_loop.vcxproj  test_loxboot_crash_loop.vcxproj.filters  test_loxboot_crc32.vcxproj  test_loxboot_crc32.vcxproj.filters  test_loxboot_init.vcxproj  test_loxboot_init.vcxproj.filters  test_loxboot_invalidate_slot.vcxproj  test_loxboot_invalidate_slot.vcxproj.filters  test_loxboot_request_slot.vcxproj  test_loxboot_request_slot.vcxproj.filters  test_loxboot_rollback.vcxproj  test_loxboot_rollback.vcxproj.filters  test_loxboot_slot_state.vcxproj  test_loxboot_slot_state.vcxproj.filters  test_loxboot_state_edges.vcxproj  test_loxboot_state_edges.vcxproj.filters  test_loxboot_uart_frame.vcxproj  test_loxboot_uart_frame.vcxproj.filters  test_loxboot_uart_receive.vcxproj  test_loxboot_uart_receive.vcxproj.filters
build_msvc_uart/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  loxboot.sln  loxboot.vcxproj  loxboot.vcxproj.filters  test_loxboot_boot_sequence.vcxproj  test_loxboot_boot_sequence.vcxproj.filters  test_loxboot_commit_slot.vcxproj  test_loxboot_commit_slot.vcxproj.filters  test_loxboot_confirm_boot.vcxproj  test_loxboot_confirm_boot.vcxproj.filters  test_loxboot_crash_loop.vcxproj  test_loxboot_crash_loop.vcxproj.filters  test_loxboot_crc32.vcxproj  test_loxboot_crc32.vcxproj.filters  test_loxboot_init.vcxproj  test_loxboot_init.vcxproj.filters  test_loxboot_invalidate_slot.vcxproj  test_loxboot_invalidate_slot.vcxproj.filters  test_loxboot_request_slot.vcxproj  test_loxboot_request_slot.vcxproj.filters  test_loxboot_rollback.vcxproj  test_loxboot_rollback.vcxproj.filters  test_loxboot_slot_state.vcxproj  test_loxboot_slot_state.vcxproj.filters  test_loxboot_state_edges.vcxproj  test_loxboot_state_edges.vcxproj.filters  test_loxboot_uart_frame.vcxproj  test_loxboot_uart_frame.vcxproj.filters  test_loxboot_uart_receive.vcxproj  test_loxboot_uart_receive.vcxproj.filters
build_msvc_uart/Release/: loxboot.lib
build_msvc_uart/loxboot.dir/Release/: loxboot.lib.recipe
build_msvc_uart/test_loxboot_boot_sequence.dir/Release/: test_loxboot_boot_sequence.exe.recipe
build_msvc_uart/test_loxboot_commit_slot.dir/Release/: test_loxboot_commit_slot.exe.recipe
build_msvc_uart/test_loxboot_confirm_boot.dir/Release/: test_loxboot_confirm_boot.exe.recipe
build_msvc_uart/test_loxboot_crash_loop.dir/Release/: test_loxboot_crash_loop.exe.recipe
build_test_gcc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  loxboot.sln  loxboot.vcxproj  loxboot.vcxproj.filters  test_loxboot_boot_sequence.vcxproj  test_loxboot_boot_sequence.vcxproj.filters  test_loxboot_commit_slot.vcxproj  test_loxboot_commit_slot.vcxproj.filters  test_loxboot_confirm_boot.vcxproj  test_loxboot_confirm_boot.vcxproj.filters  test_loxboot_crash_loop.vcxproj  test_loxboot_crash_loop.vcxproj.filters  test_loxboot_crc32.vcxproj  test_loxboot_crc32.vcxproj.filters  test_loxboot_init.vcxproj  test_loxboot_init.vcxproj.filters  test_loxboot_invalidate_slot.vcxproj  test_loxboot_invalidate_slot.vcxproj.filters  test_loxboot_request_slot.vcxproj  test_loxboot_request_slot.vcxproj.filters  test_loxboot_rollback.vcxproj  test_loxboot_rollback.vcxproj.filters  test_loxboot_slot_state.vcxproj  test_loxboot_slot_state.vcxproj.filters  test_loxboot_state_edges.vcxproj  test_loxboot_state_edges.vcxproj.filters  test_loxboot_uart_frame.vcxproj  test_loxboot_uart_frame.vcxproj.filters  test_loxboot_uart_receive.vcxproj  test_loxboot_uart_receive.vcxproj.filters
cmake/: toolchain-arm-none-eabi.cmake
docs/: HARDWARE_EVIDENCE.md  INTEGRATION.md  MEMORY_LAYOUT.md  PLATFORM_STATUS.md  PORTING.md  POWERLOSS_TEST_PLAN.md  PROTOCOL_UART.md  SECURITY_LAYER_PLAN.md  SPEC.md  TEST_PLAN.md
examples/: CMakeLists.txt  README.md
examples/esp32_uart/: app_main.c
examples/generic_custom_adapter/: main.c
examples/stm32_uart/: main.c
idf_project/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
idf_project/components/loxboot/: CMakeLists.txt
idf_project/main/: CMakeLists.txt  main.c
include/loxboot/: loxboot.h  loxboot_transport.h  loxboot_version.h
ports/uart/: loxboot_uart.c  loxboot_uart.h
src/: loxboot_core.c  loxboot_crc32.c  loxboot_state.c
tests/: esp_ota_stub.h  test_adapters.c  test_loxboot_boot_sequence.c  test_loxboot_commit_slot.c  test_loxboot_confirm_boot.c  test_loxboot_crash_loop.c  test_loxboot_crc32.c  test_loxboot_esp32_platform.c  test_loxboot_init.c  test_loxboot_invalidate_slot.c  test_loxboot_request_slot.c  test_loxboot_rollback.c  test_loxboot_slot_state.c  test_loxboot_state_edges.c  test_loxboot_uart_frame.c  test_loxboot_uart_receive.c  test_support.c  test_support.h
tools/: check_repo_clean.py  diag_ota.py  local_verify.py  loxboot_sim.c  test_e2e.py  test_e2e_ota.py  test_e2e_ota_powerloss.py  test_e2e_serial.py
(+128 files in other folders)
